feat: add Delphi to Docker Compose `with-delphi` profile

--- a/apps/labrinth/.env.docker-compose
+++ b/apps/labrinth/.env.docker-compose
@@ -129,7 +129,7 @@ PYRO_API_KEY=none
 BREX_API_URL=https://platform.brexapis.com/v2/
 BREX_API_KEY=none
 
-DELPHI_URL=none
+DELPHI_URL=http://labrinth-delphi:59999
 DELPHI_SLACK_WEBHOOK=none
 
 AVALARA_1099_API_URL=https://www.track1099.com/api
