--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -56,6 +56,7 @@
 		"floating-vue": "^5.2.2",
 		"fuse.js": "^6.6.2",
 		"highlight.js": "^11.7.0",
+		"html-pdf-node-ts": "^1.0.7",
 		"iso-3166-1": "^2.1.1",
 		"js-yaml": "^4.1.0",
 		"jszip": "^3.10.1",
