--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -34,6 +34,7 @@
 		"vue-tsc": "^2.0.24"
 	},
 	"dependencies": {
+		"@ceereals/vue-pdf": "^0.2.0",
 		"@formatjs/intl-localematcher": "^0.5.4",
 		"@intercom/messenger-js-sdk": "^0.0.14",
 		"@ltd/j-toml": "^1.38.0",
@@ -56,7 +57,6 @@
 		"floating-vue": "^5.2.2",
 		"fuse.js": "^6.6.2",
 		"highlight.js": "^11.7.0",
-		"html-pdf-node-ts": "^1.0.7",
 		"iso-3166-1": "^2.1.1",
 		"js-yaml": "^4.1.0",
 		"jszip": "^3.10.1",
