--- a/apps/labrinth/Cargo.toml
+++ b/apps/labrinth/Cargo.toml
@@ -35,12 +35,7 @@ paste.workspace = true
 
 meilisearch-sdk = { workspace = true, features = ["reqwest"] }
 rust-s3.workspace = true
-reqwest = { workspace = true, features = [
-	"http2",
-	"rustls-tls-webpki-roots",
-	"json",
-	"multipart",
-] }
+reqwest = { workspace = true, features = ["http2", "rustls-tls-webpki-roots", "json", "multipart"] }
 hyper-rustls.workspace = true
 hyper-util.workspace = true
 
@@ -90,10 +85,7 @@ sqlx = { workspace = true, features = [
 	"rust_decimal",
 	"json",
 ] }
-rust_decimal = { workspace = true, features = [
-	"serde-with-float",
-	"serde-with-str",
-] }
+rust_decimal = { workspace = true, features = ["serde-with-float", "serde-with-str"] }
 redis = { workspace = true, features = ["tokio-comp", "ahash", "r2d2"] }
 deadpool-redis.workspace = true
 clickhouse = { workspace = true, features = ["uuid", "time"] }
@@ -132,12 +124,7 @@ lettre.workspace = true
 
 rust_iso3166.workspace = true
 
-async-stripe = { workspace = true, features = [
-	"billing",
-	"checkout",
-	"connect",
-	"webhook-events",
-] }
+async-stripe = { workspace = true, features = ["billing", "checkout", "connect", "webhook-events"] }
 rusty-money.workspace = true
 json-patch.workspace = true
 
