--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,7 @@ bitflags = "2.9.1"
 bytemuck = "1.23.1"
 bytes = "1.10.1"
 censor = "0.3.0"
+cfg-if = "1.0.3"
 chardetng = "0.1.17"
 chrono = "0.4.41"
 clap = "4.5.43"
@@ -137,6 +138,7 @@ serde-xml-rs = "0.8.1" # Also an XML (de)serializer, consider dropping yaserde i
 sha1 = "0.10.6"
 sha1_smol = { version = "1.0.1", features = ["std"] }
 sha2 = "0.10.9"
+shlex = "1.3.0"
 spdx = "0.10.9"
 sqlx = { version = "0.8.6", default-features = false }
 sysinfo = { version = "0.36.1", default-features = false }
