--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,13 @@
 [workspace]
 resolver = "2"
 members = [
-	# "apps/app",
-	# "apps/app-playground",
-	# "apps/daedalus_client",
+	"apps/app",
+	"apps/app-playground",
+	"apps/daedalus_client",
 	"apps/labrinth",
-	# "packages/app-lib",
-	# "packages/ariadne",
-	# "packages/daedalus",
+	"packages/app-lib",
+	"packages/ariadne",
+	"packages/daedalus",
 ]
 
 [workspace.package]
