--- a/packages/app-lib/Cargo.toml
+++ b/packages/app-lib/Cargo.toml
@@ -80,7 +80,7 @@ tokio = { workspace = true, features = [
 	"macros",
 	"process",
 ] }
-tokio-util = { workspace = true, features = ["compat", "io", "io-util"] }
+tokio-util = { workspace = true, features = ["compat", "io", "io-util", "time"] }
 async-recursion.workspace = true
 fs4 = { workspace = true, features = ["tokio"] }
 async-walkdir.workspace = true
@@ -109,12 +109,19 @@ sqlx = { workspace = true, features = [
 ] }
 
 quartz_nbt = { workspace = true, features = ["serde"] }
+
 hickory-resolver.workspace = true
+zbus.workspace = true
 
 ariadne.workspace = true
 
 [target.'cfg(windows)'.dependencies]
 winreg.workspace = true
+windows = { workspace = true, features = ["Networking_Connectivity"] }
+windows-core.workspace = true
+
+[target.'cfg(target_os = "macos")'.dependencies]
+cidre = { workspace = true, features = ["nw", "blocks"] }
 
 [build-dependencies]
 dotenvy.workspace = true
