--- a/Cargo.toml
+++ b/Cargo.toml
@@ -67,6 +67,7 @@ hex = "0.4.3"
 hickory-resolver = "0.25.2"
 hmac = "0.12.1"
 hyper = "1.6.0"
+tracing-ecs = "0.5.0"
 hyper-rustls = { version = "0.27.7", default-features = false, features = [
 	"http1",
 	"native-tokio",
