--- a/Cargo.toml
+++ b/Cargo.toml
@@ -67,6 +67,7 @@ hex = "0.4.3"
 hickory-resolver = "0.25.2"
 hmac = "0.12.1"
 hyper = "1.6.0"
+tracing-ecs = "0.5.0"
 hyper-rustls = { version = "0.27.7", default-features = false, features = [
 	"http1",
 	"native-tokio",
@@ -165,9 +166,11 @@ tokio-stream = "0.1.17"
 tokio-util = "0.7.16"
 totp-rs = "5.7.0"
 tracing = "0.1.41"
-tracing-actix-web = "0.7.19"
+tracing-actix-web = { version = "0.7.19", default-features = false }
 tracing-error = "0.2.1"
 tracing-subscriber = "0.3.19"
+eyre = "0.6.12"
+color-eyre = "0.6.5"
 url = "2.5.4"
 urlencoding = "2.1.3"
 uuid = "1.17.0"
