--- a/apps/app/Cargo.toml
+++ b/apps/app/Cargo.toml
@@ -11,6 +11,7 @@ tauri-build = { workspace = true, features = ["codegen"] }
 
 [dependencies]
 theseus = { workspace = true, features = ["tauri"] }
+path-util.workspace = true
 
 serde_json.workspace = true
 serde = { workspace = true, features = ["derive"] }
