tweak(path-util): addendum to #4482
These changes improve on those introduced in #4482 in two ways:

- The serialization logic for `SafeRelativeUtf8UnixPathBuf` now more
  closely mirrors the deserialization checks, reducing the chance that a
  generated path will fail to deserialize. While unlikely in practice,
  catching such theoretical cases earlier improves the experience for
  users and developers.
- After deeper testing on a clean Windows 10 VM, I found that reserved
  device names can have both an extension and an alternate data stream
  appended, not just one or the other. These changes handle that case
  more gracefully.

--- a/packages/path-util/Cargo.toml
+++ b/packages/path-util/Cargo.toml
@@ -4,7 +4,7 @@ edition.workspace = true
 
 [dependencies]
 typed-path.workspace = true
-serde = { workspace = true, features = ["derive"] }
+serde.workspace = true
 derive_more = { workspace = true, features = ["display", "deref"] }
 itertools.workspace = true
 
