--- a/apps/daedalus_client/Dockerfile
+++ b/apps/daedalus_client/Dockerfile
@@ -5,15 +5,14 @@ FROM rust:1.89.0 AS build
 WORKDIR /usr/src/daedalus
 COPY . .
 RUN --mount=type=cache,target=/usr/src/daedalus/target \
-  --mount=type=cache,target=/usr/local/cargo/git/db \
-  --mount=type=cache,target=/usr/local/cargo/registry \
-  cargo build --release --package daedalus_client
+	--mount=type=cache,target=/usr/local/cargo,from=rust:1.89.0,source=/usr/local/cargo \
+	cargo build --release --package daedalus_client
 
 FROM build AS artifacts
 
 RUN --mount=type=cache,target=/usr/src/daedalus/target \
-  mkdir /daedalus \
-  && cp /usr/src/daedalus/target/release/daedalus_client /daedalus/daedalus_client
+	mkdir /daedalus \
+	&& cp /usr/src/daedalus/target/release/daedalus_client /daedalus/daedalus_client
 
 FROM debian:bookworm-slim
 
@@ -23,8 +22,8 @@ LABEL org.opencontainers.image.description="Modrinth game metadata query client"
 LABEL org.opencontainers.image.licenses=MIT
 
 RUN apt-get update \
-  && apt-get install -y --no-install-recommends ca-certificates openssl \
-  && rm -rf /var/lib/apt/lists/*
+	&& apt-get install -y --no-install-recommends ca-certificates openssl \
+	&& rm -rf /var/lib/apt/lists/*
 
 COPY --from=artifacts /daedalus /daedalus
 
