--- a/apps/app/Cargo.toml
+++ b/apps/app/Cargo.toml
@@ -1,23 +1,27 @@
 [package]
-name = "theseus_gui"
-version = "1.0.0-local"                                                                    # The actual version is set by the theseus-build workflow on tagging
-description = "The Modrinth App is a desktop application for managing your Minecraft mods"
-license = "GPL-3.0-only"
-repository = "https://github.com/modrinth/code/apps/app/"
+description       = "The Modrinth App is a desktop application for managing your Minecraft mods"
 edition.workspace = true
+license           = "GPL-3.0-only"
+name              = "theseus_gui"
+repository        = "https://github.com/modrinth/code/apps/app/"
+version           = "1.0.0-local"                                                                # The actual version is set by the theseus-build workflow on tagging
 
 [build-dependencies]
 tauri-build = { workspace = true, features = ["codegen"] }
 
 [dependencies]
-theseus = { workspace = true, features = ["tauri"] }
 path-util.workspace = true
+theseus             = { workspace = true, features = ["tauri"] }
 
+serde                = { workspace = true, features = ["derive"] }
 serde_json.workspace = true
-serde = { workspace = true, features = ["derive"] }
 serde_with.workspace = true
 
-tauri = { workspace = true, features = ["devtools", "macos-private-api", "protocol-asset"] }
+tauri = { workspace = true, features = [
+  "devtools",
+  "macos-private-api",
+  "protocol-asset",
+] }
 tauri-plugin-deep-link.workspace = true
 tauri-plugin-dialog.workspace = true
 tauri-plugin-http.workspace = true
@@ -27,24 +31,24 @@ tauri-plugin-single-instance.workspace = true
 tauri-plugin-updater.workspace = true
 tauri-plugin-window-state.workspace = true
 
-tokio = { workspace = true, features = ["time"] }
-thiserror.workspace = true
-daedalus.workspace = true
-chrono.workspace = true
-either.workspace = true
-hyper = { workspace = true, features = ["server"] }
+chrono.workspace     = true
+daedalus.workspace   = true
+either.workspace     = true
+hyper                = { workspace = true, features = ["server"] }
 hyper-util.workspace = true
+thiserror.workspace  = true
+tokio                = { workspace = true, features = ["time"] }
 
-url.workspace = true
+url.workspace         = true
 urlencoding.workspace = true
-uuid = { workspace = true, features = ["serde", "v4"] }
+uuid                  = { workspace = true, features = ["serde", "v4"] }
 
-tracing.workspace = true
+tracing.workspace       = true
 tracing-error.workspace = true
 
 dashmap.workspace = true
-paste.workspace = true
-enumset = { workspace = true, features = ["serde"] }
+enumset           = { workspace = true, features = ["serde"] }
+paste.workspace   = true
 
 native-dialog.workspace = true
 
@@ -62,7 +66,7 @@ default = ["custom-protocol"]
 # this feature is used for production builds where `devPath` points to the filesystem
 # DO NOT remove this
 custom-protocol = ["tauri/custom-protocol"]
-updater = []
+updater         = []
 
 [lints]
 workspace = true
