--- a/apps/daedalus_client/Cargo.toml
+++ b/apps/daedalus_client/Cargo.toml
@@ -1,39 +1,43 @@
 [package]
-name = "daedalus_client"
-version = "0.2.2"
-authors = ["Jai A <jai@modrinth.com>"]
+authors           = ["Jai A <jai@modrinth.com>"]
 edition.workspace = true
+name              = "daedalus_client"
+version           = "0.2.2"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-daedalus.workspace = true
-tokio = { workspace = true, features = ["sync", "macros", "rt-multi-thread"] }
-futures.workspace = true
-dotenvy.workspace = true
-serde = { workspace = true, features = ["derive"] }
-serde_json.workspace = true
-serde-xml-rs.workspace = true
-thiserror.workspace = true
-reqwest = { workspace = true, features = ["stream", "json", "rustls-tls-native-roots"] }
 async_zip = { workspace = true, features = [
-	"chrono",
-	"tokio-fs",
-	"deflate",
-	"bzip2",
-	"zstd",
-	"deflate64",
+  "chrono",
+  "tokio-fs",
+  "deflate",
+  "bzip2",
+  "zstd",
+  "deflate64",
 ] }
-chrono = { workspace = true, features = ["serde"] }
 bytes.workspace = true
-rust-s3.workspace = true
+chrono = { workspace = true, features = ["serde"] }
+daedalus.workspace = true
 dashmap.workspace = true
-sha1_smol.workspace = true
+dotenvy.workspace = true
+futures.workspace = true
 indexmap = { workspace = true, features = ["serde"] }
 itertools.workspace = true
+reqwest = { workspace = true, features = [
+  "stream",
+  "json",
+  "rustls-tls-native-roots",
+] }
+rust-s3.workspace = true
+serde = { workspace = true, features = ["derive"] }
+serde-xml-rs.workspace = true
+serde_json.workspace = true
+sha1_smol.workspace = true
+thiserror.workspace = true
+tokio = { workspace = true, features = ["sync", "macros", "rt-multi-thread"] }
 tracing-error.workspace = true
 
-tracing.workspace = true
+tracing.workspace  = true
 tracing-subscriber = { workspace = true, features = ["env-filter"] }
 
 [lints]
