--- a/apps/app-playground/Cargo.toml
+++ b/apps/app-playground/Cargo.toml
@@ -1,14 +1,12 @@
 [package]
+name = "theseus_playground"
+
 edition.workspace = true
-name              = "theseus_playground"
-version           = "0.0.0"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
-enumset.workspace = true
-theseus           = { workspace = true, features = ["cli"] }
-tokio             = { workspace = true, features = ["macros", "rt-multi-thread"] }
 
 [lints]
 workspace = true
+
+[dependencies]
+enumset = { workspace = true }
+theseus = { workspace = true, features = ["cli"] }
+tokio   = { workspace = true, features = ["macros", "rt-multi-thread"] }
