Loosen typos a bit

--- a/.github/workflows/check-generic.yml
+++ b/.github/workflows/check-generic.yml
@@ -9,8 +9,6 @@ env:
   SQLX_OFFLINE: true
 
 jobs:
-  # less demanding jobs use 2vcpu runners
-
   typos:
     runs-on: ubuntu-latest
     steps:
@@ -18,7 +16,7 @@ jobs:
       - uses: crate-ci/typos@master
 
   taplo:
-    runs-on: blacksmith-2vcpu-ubuntu-2404
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: uncenter/setup-taplo@v1
