--- a/packages/muralpay/Cargo.toml
+++ b/packages/muralpay/Cargo.toml
@@ -17,10 +17,18 @@ reqwest    = { workspace = true, features = ["json"] }
 secrecy    = { workspace = true }
 serde      = { workspace = true, features = ["derive"] }
 serde_with      = { workspace = true }
+foldhash = { workspace = true }
 serde_json = { workspace = true }
 uuid = { workspace = true, features = ["serde"] }
-derive_more = { workspace = true, features = ["display", "deref", "error"]}
+derive_more = { workspace = true, features = ["display", "deref", "error", "from"] }
+chrono = { workspace = true, features = ["serde"]}
+itertools = { workspace = true }
+bytes = { workspace = true }
+rust_decimal = { workspace = true, features = ["serde-float", "macros"] }
 
 [dev-dependencies]
 tokio = { workspace = true, features = ["full"] }
 eyre = { workspace = true }
+clap = { workspace = true, features = ["derive"] }
+color-eyre = { workspace = true }
+tracing-subscriber = { workspace = true }
