Switch to Tombi

--- a/.github/workflows/check-generic.yml
+++ b/.github/workflows/check-generic.yml
@@ -15,11 +15,9 @@ jobs:
       - uses: actions/checkout@v4
       - uses: crate-ci/typos@master
 
-  taplo:
+  tombi:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: uncenter/setup-taplo@v1
-        with:
-          version: '0.8.1'
-      - run: taplo fmt --check
+      - uses: tombi-toml/setup-tombi@v1
+      - run: tombi lint
