--- a/packages/daedalus/Cargo.toml
+++ b/packages/daedalus/Cargo.toml
@@ -1,22 +1,20 @@
 [package]
-authors     = ["Jai A <jai@modrinth.com>"]
-categories  = ["game-development", "api-bindings"]
-description = "Utilities for querying and parsing Minecraft metadata"
-include     = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]
-keywords    = ["minecraft", "launcher"]
-license     = "MIT"
-name        = "daedalus"
-readme      = "README.md"
-repository  = "https://github.com/modrinth/daedalus/"
-version     = "0.2.3"
-
+name = "daedalus"
+version = "0.2.3"
 edition.workspace = true
+description = "Utilities for querying and parsing Minecraft metadata"
+readme = "README.md"
+repository = "https://github.com/modrinth/daedalus/"
+license = "MIT"
+keywords = ["launcher", "minecraft"]
+categories = ["api-bindings", "game-development"]
+include = ["Cargo.toml", "LICENSE", "README.md", "src/**/*.rs"]
+
+[dependencies]
+chrono = { workspace = true, features = ["serde"] }
+serde = { workspace = true, features = ["derive"] }
+serde_json = { workspace = true }
+thiserror = { workspace = true }
 
 [lints]
 workspace = true
-
-[dependencies]
-chrono     = { workspace = true, features = ["serde"] }
-serde      = { workspace = true, features = ["derive"] }
-serde_json = { workspace = true }
-thiserror  = { workspace = true }
