--- a/.github/workflows/check-generic.yml
+++ b/.github/workflows/check-generic.yml
@@ -21,3 +21,4 @@ jobs:
       - uses: actions/checkout@v4
       - uses: tombi-toml/setup-tombi@v1
       - run: tombi lint
+      - run: tombi fmt --check
