--- a/apps/labrinth/.env.local
+++ b/apps/labrinth/.env.local
@@ -144,5 +144,6 @@ ANROK_API_URL=none
 
 ARCHON_URL=none
 
+MURALPAY_API_URL=https://api-staging.muralpay.com
 MURALPAY_API_KEY=none
 MURALPAY_TRANSFER_API_KEY=none
