--- a/Cargo.toml
+++ b/Cargo.toml
@@ -64,7 +64,7 @@ encoding_rs = "0.8.35"
 enumset = "1.1.10"
 flate2 = "1.1.4"
 fs4 = { version = "0.13.1", default-features = false }
-futures = { version = "0.3.31", default-features = false }
+futures = { version = "0.3.31", default-features = false, features = ["std"] }
 futures-util = "0.3.31"
 heck = "0.5.0"
 hex = "0.4.3"
@@ -118,7 +118,7 @@ reqwest = { version = "0.12.23", default-features = false }
 rgb = "0.8.52"
 rust_decimal = { version = "1.38.0", features = ["serde-with-float", "serde-with-str"] }
 rust_iso3166 = "0.1.14"
-rust-s3 = { version = "0.35.1", default-features = false, features = [
+rust-s3 = { version = "0.37.0", default-features = false, features = [
 	"fail-on-err",
 	"tags",
 	"tokio-rustls-tls",
