Note that windows and windows-core can't be updated yet

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -181,8 +181,8 @@ uuid = "1.18.1"
 validator = "0.20.0"
 webp = { version = "0.3.1", default-features = false }
 whoami = "1.6.1"
-windows = "0.61.3"
-windows-core = "0.61.2"
+windows = "=0.61.3" # Locked on 0.61 until we can update windows-core to 0.62
+windows-core = "=0.61.2" # Locked on 0.61 until webview2-com updates to 0.62
 webview2-com = "0.38.0" # Should be updated in lockstep with wry
 winreg = "0.55.0"
 woothee = "0.13.0"
