Mural Pay payouts work

--- a/packages/muralpay/Cargo.toml
+++ b/packages/muralpay/Cargo.toml
@@ -1,35 +1,40 @@
 [package]
-categories  = ["api-bindings"]
-description = "Mural Pay API"
-keywords    = []
-license     = "MIT"
-name        = "muralpay"
-repository  = "https://github.com/modrinth/code/"
-version     = "0.1.0"
-
+name = "muralpay"
+version = "0.1.0"
 edition.workspace = true
+description = "Mural Pay API"
+repository = "https://github.com/modrinth/code/"
+license = "MIT"
+keywords = []
+categories = ["api-bindings"]
+
+[dependencies]
+bytes = { workspace = true }
+chrono = { workspace = true, features = ["serde"] }
+derive_more = { workspace = true, features = [
+  "deref",
+  "display",
+  "error",
+  "from",
+] }
+foldhash = { workspace = true }
+itertools = { workspace = true }
+reqwest = { workspace = true, features = ["default-tls", "http2", "json"] }
+rust_decimal = { workspace = true, features = ["macros", "serde-float"] }
+rust_iso3166 = { workspace = true }
+secrecy = { workspace = true }
+serde = { workspace = true, features = ["derive"] }
+serde_json = { workspace = true }
+serde_with = { workspace = true }
+uuid = { workspace = true, features = ["serde"] }
+
+[dev-dependencies]
+clap = { workspace = true, features = ["derive"] }
+color-eyre = { workspace = true }
+dotenvy = { workspace = true }
+eyre = { workspace = true }
+tokio = { workspace = true, features = ["full"] }
+tracing-subscriber = { workspace = true }
 
 [lints]
 workspace = true
-
-[dependencies]
-reqwest    = { workspace = true, features = ["default-tls", "http2", "json"] }
-secrecy    = { workspace = true }
-serde      = { workspace = true, features = ["derive"] }
-serde_with      = { workspace = true }
-foldhash = { workspace = true }
-serde_json = { workspace = true }
-uuid = { workspace = true, features = ["serde"] }
-derive_more = { workspace = true, features = ["display", "deref", "error", "from"] }
-chrono = { workspace = true, features = ["serde"]}
-itertools = { workspace = true }
-bytes = { workspace = true }
-rust_decimal = { workspace = true, features = ["serde-float", "macros"] }
-
-[dev-dependencies]
-tokio = { workspace = true, features = ["full"] }
-eyre = { workspace = true }
-clap = { workspace = true, features = ["derive"] }
-color-eyre = { workspace = true }
-tracing-subscriber = { workspace = true }
-dotenvy = { workspace = true }
