Reapply "refactor(app): reduce tech debt by eliminating `wry` fork (#4500)"
This reverts commit 2535156dacc1cbd2344a7ad278cc7ed22bf72a4e.

--- a/apps/app/Cargo.toml
+++ b/apps/app/Cargo.toml
@@ -49,6 +49,10 @@ tauri-build = { workspace = true, features = ["codegen"] }
 [target.'cfg(target_os = "linux")'.dependencies]
 tauri-plugin-updater = { workspace = true, optional = true }
 
+[target.'cfg(windows)'.dependencies]
+webview2-com.workspace = true
+windows-core.workspace = true
+
 [features]
 # by default Tauri runs in production mode
 # when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
